swen430as2/test_files/invalid/casts/MYCast_Invalid_1-TC01.while
type Record_1 is { null field, null g} | { null field, null g}
type Record_2 is { int field, bool g}| { bool field, null g}

Record_2 f(Record_1 r) {
    return r;
}

void main() {
    assert f({field: true,g:null}) == {field: true,g:null};
}